Adjusting room width to prevent wrapping on some screens.

--- a/hotelstyle.css
+++ b/hotelstyle.css
@@ -92,6 +92,7 @@ body > *:not(#backimg) {
 }
 
 .room {
+  width:267px;
   border-radius:7px;
   padding:20px 30px;
   height:217.833px;
